fixes small layout issues

--- a/djaoapp/static/scss/base/djaodjin-dashboard.scss
+++ b/djaoapp/static/scss/base/djaodjin-dashboard.scss
@@ -200,7 +200,7 @@ body{
   transition: display 0.25s allow-discrete;
 }
 
-.dashboard-pane-sidebar .dashboard-nav.sidebar-opened {
+.dashboard-nav.sidebar-opened {
     display: block;
 }
 
